testdata/Call.switch_vc/m2p_m/m2p_m.3.1-migr.check
// exitCode: 1
-- Error: target/testdata/Call.switch_vc/m2p_m.scala:2:57 ----------------------
2 |class M2P_VC(val x: String) extends AnyVal with MU { def d   = "" }
  |                                                         ^
  |                 error overriding method d in trait MU of type (): String;
  |                   method d of type => String has incompatible type
1 error found
